<resources>
    <string name="app_name">Sweet Weather</string>
    <string name="background">Background</string>
    <string name="city_name">City</string>
    <string name="city_day">Day</string>
    <string name="city_temperature">C&#176;</string>
    <string name="city_status">Status</string>
    <string name="city_search">Введите город</string>
    <string name="search">Поиск</string>
    <string name="citySearch_button">Поиск городов</string>
    <string name="cityInfo_button">Информация о городе</string>
    <string name="cityInfo_link">https://www.google.com/search?q=</string>
    <string-array name="days">
        <item>Пн.</item>
        <item>Вт.</item>
        <item>Ср.</item>
        <item>Чт.</item>
        <item>Пт.</item>
        <item>Сб.</item>
        <item>Вс.</item>
    </string-array>
    <string-array name="temperatures">
        <item>20&#176;</item>
        <item>24&#176;</item>
        <item>19&#176;</item>
        <item>15&#176;</item>
        <item>28&#176;</item>
        <item>30&#176;</item>
        <item>28&#176;</item>
        <item>26&#176;</item>
    </string-array>
    <string-array name="statuses">
        <item>Солнечно</item>
        <item>Дождь</item>
        <item>Облачно</item>
        <item>Буря</item>
    </string-array>
    <string-array name="cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Токио</item>
        <item>Дели</item>
        <item>Шанхай</item>
        <item>Сан-Паулу</item>
        <item>Мехико</item>
        <item>Каир</item>
        <item>Мумбаи</item>
        <item>Пекин</item>
    </string-array>
</resources>