<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/TodayInfo"
        android:layout_width="0dp"
        android:layout_height="301dp"
        android:background="@mipmap/cloud_bg"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textCity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="50dp"
            android:text="@string/city_name"
            android:textAlignment="center"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTemperatureNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:text="@string/city_temperature"
                android:textAlignment="center"
                android:textSize="30sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/textStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_status"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TodayInfo">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E3E0E0">

            <TextView
                android:id="@+id/textDay1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/city_day"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textDay2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/city_day"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textDay3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/city_day"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textDay4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/city_day"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textDay5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/city_day"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textDay6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/city_day"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textDay7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/city_day"
                android:textAlignment="center"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/imageStatus1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/city_status"
                app:srcCompat="@mipmap/sun" />

            <ImageView
                android:id="@+id/imageStatus2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/city_status"
                app:srcCompat="@mipmap/cloud" />

            <ImageView
                android:id="@+id/imageStatus3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/city_status"
                app:srcCompat="@mipmap/storm" />

            <ImageView
                android:id="@+id/imageStatus4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/city_status"
                app:srcCompat="@mipmap/sun" />

            <ImageView
                android:id="@+id/imageStatus5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/city_status"
                app:srcCompat="@mipmap/sun" />

            <ImageView
                android:id="@+id/imageStatus6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/city_status"
                app:srcCompat="@mipmap/sun" />

            <ImageView
                android:id="@+id/imageStatus7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/city_status"
                app:srcCompat="@mipmap/rain" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E3E0E0">

            <TextView
                android:id="@+id/textTemperatures1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/city_temperature"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textTemperatures2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/city_temperature"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textTemperatures3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/city_temperature"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textTemperatures4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/city_temperature"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textTemperatures5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/city_temperature"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textTemperatures6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/city_temperature"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textTemperatures7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/city_temperature"
                android:textAlignment="center"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>